implemented delete character, many things, rejected character cleaner fix after 2 days, etc.
